sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
